--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,8 @@
     <ul>
       <li><a href="/quienes-somos">¿Quiénes somos?</a></li>
       <li><a href="/orientacion">Orientación</a></li>
-      <li><a href="/rapicredit">Rapicredit</a></li>
-      <li><a href="/krediticy">Krediticy</a></li>
-      <li><a href="/lineru">Lineru</a></li>
-      <li><a href="/otras-opciones">Otras opciones</a></li>
+      <li><a href="/plataformas">Plataformas</a></li>
+      <li><a href="/comparacion">Comparación</a></li>
     </ul>
   </nav>
   
