--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <!-- Menú de navegación (Navbar) -->
 <nav class="navbar">
-    <ul>
-      <li><a href="/quienes-somos">¿Quiénes somos?</a></li>
-      <li><a href="/orientacion">Orientación</a></li>
-      <li><a href="/plataformas">Plataformas</a></li>
-      <li><a href="/comparacion">Comparación</a></li>
-    </ul>
-  </nav>
-  
-  <!-- Aquí se cargará el contenido de cada página -->
-  <router-outlet></router-outlet>
+  <ul>
+    <li><a href="#/quienes-somos">¿Quiénes somos?</a></li>
+    <li><a href="#/orientacion">Orientación</a></li>
+    <li><a href="#/plataformas">Plataformas</a></li>
+    <li><a href="#/comparacion">Comparación</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
   
