--- a/src/app/components/plataformas/plataformas.component.css
+++ b/src/app/components/plataformas/plataformas.component.css
@@ -6,6 +6,15 @@
     gap: 3rem;
 }
 
+h2 {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bolder;
+    margin-bottom: 1.5rem;
+    color: #000000;
+}
+
 .plataformas-titulo {
     text-align: center;
     margin-top: -30px;
