--- a/src/app/components/quienes-somos/quienes-somos.component.css
+++ b/src/app/components/quienes-somos/quienes-somos.component.css
@@ -16,7 +16,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: justify;
     height: 180px;
-    width: 500px;   
+    width: 500px;
     margin-left: 45px;
 }
 
@@ -25,12 +25,14 @@
     justify-content: center;
     gap: 1rem;
     padding-right: 30px;
-    align-items: center;  /* Asegura que el contenido esté alineado verticalmente */
+    align-items: center;
+    /* Asegura que el contenido esté alineado verticalmente */
 }
 
 .quienes-somos-img {
     margin-right: -20px;
-    align-self: center;  /* Asegura que la imagen se centre verticalmente */
+    align-self: center;
+    /* Asegura que la imagen se centre verticalmente */
     width: 250px;
     height: 350px;
     border-radius: 1rem;
@@ -39,9 +41,18 @@
     -moz-border-radius: 1rem;
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
-    object-fit: cover;  /* Asegura que la imagen no se deforme */
+    object-fit: cover;
+    /* Asegura que la imagen no se deforme */
 }
 
+h2 {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bolder;
+    margin-bottom: 1.5rem;
+    color: #000000;
+}
 
 /* Estilos de párrafos */
 p {
@@ -50,12 +61,6 @@ p {
     max-width: 800px;
     margin: 0 auto 20px;
     text-align: justify;
-}
-
-/* Estilo de encabezados */
-h2 {
-    font-size: 1.8rem;
-    margin-bottom: 0.5px;
 }
 
 /* Beneficios */
