--- a/src/app/components/simuladores/rapicredit/simulador-rapicredit.component.css
+++ b/src/app/components/simuladores/rapicredit/simulador-rapicredit.component.css
@@ -29,7 +29,14 @@
 input[type="range"] {
   width: 100%;
   margin-bottom: 0.5rem;
-    accent-color: #2c6de9;
+  accent-color: #2c6de9;
+}
+
+select {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .resultados table {
