--- a/src/app/components/simuladores/lineru/simulador-lineru.component.html
+++ b/src/app/components/simuladores/lineru/simulador-lineru.component.html
@@ -75,7 +75,7 @@
     </table>
   </div>
 
-  <a class="btn-externo" href="https://www.lineru.com" target="_blank">
+  <a class="btn-externo" href="https://www.lineru.com/calcula-tu-credito/" target="_blank">
     Ir a Linerú
   </a>
 </div>
