--- a/src/app/components/simuladores/rapicredit/simulador-rapicredit.component.html
+++ b/src/app/components/simuladores/rapicredit/simulador-rapicredit.component.html
@@ -3,7 +3,15 @@
 
   <div class="parametros">
     <div class="form-group">
-      <label for="monto">Monto solicitado:</label>
+      <label for="monto">
+        Monto solicitado:
+        <span class="tooltip-container">
+          <i class="icono-info">i</i>
+          <span class="tooltip-text">
+            Si es tu primer crédito el monto máximo que te podemos otorgar es de $200.000.
+          </span>
+        </span>
+      </label>
       <input
         type="range"
         id="monto"
