--- a/src/app/components/simuladores/prestanza/simulador-prestanza.component.html
+++ b/src/app/components/simuladores/prestanza/simulador-prestanza.component.html
@@ -58,7 +58,7 @@
         <span class="checkmark"></span>
       </div>
       <div class="opcional-details">
-        <div class="opcional-title">Red Prestonza (Opcional)</div>
+        <div class="opcional-title">Red Prestanza (Opcional)</div>
         <div class="opcional-description">Beneficios exclusivos para miembros</div>
       </div>
     </div>
@@ -78,8 +78,8 @@
         <div class="item-value">{{ formatearMoneda(resumen().aval) }}</div>
       </div>
       <div class="item">
-        <div class="item-label">Red Prestonza</div>
-        <div class="item-value">{{ formatearMoneda(resumen().redPrestonza) }}</div>
+        <div class="item-label">Red Prestanza</div>
+        <div class="item-value">{{ formatearMoneda(resumen().redPrestanza) }}</div>
       </div>
       <div class="item total">
         <div class="item-label">Total Crédito</div>
