--- a/src/app/components/simuladores/rapicredit/simulador-rapicredit.component.html
+++ b/src/app/components/simuladores/rapicredit/simulador-rapicredit.component.html
@@ -71,6 +71,6 @@
   </div>
 
   <div class="acciones">
-    <a class="btn-externo" href="https://www.rapicredit.com.co" target="_blank">Ir a Rapicredit</a>
+    <a class="btn-externo" href="https://www.rapicredit.com/rapiflex/" target="_blank">Ir a Rapicredit</a>
   </div>
 </div>
