--- a/src/app/components/simuladores/wasticredit/simulador-wasticredit.component.html
+++ b/src/app/components/simuladores/wasticredit/simulador-wasticredit.component.html
@@ -1,5 +1,5 @@
 <div class="simulador-container">
-  <h2>PRESTAMOS 100% EN LÍNEA</h2>
+  <h2>OBTÉN UN 50% DE DESCUENTO EN TU PRIMER PRESTAMO</h2>
 
   <div class="modo-pago">
     <button class="activo">Pago Único</button>
